# agent-dev

./: .env.example  .gitignore  README.md  agent_context.py  agent_runtime.py  chat_agent.py  cli.py  context_policy.py  guardrails.py  hooks.py  main.py  mem_backend.py  mem_manager.py  mem_tools.py  ov.conf.example  persona.yaml  pyproject.toml  pyrightconfig.json  run.py  run_agent.py  server.py  tracing.py  wechat.py
agnts/: __init__.py  conversation.py  orchestrator.py
commands/: __init__.py  memory.py
core/: __init__.py  context.py  context_policy.py  diary.py  history.py  hooks.py  loop.py  memory.py  meta.py  proactive.py  session.py  time_hint.py  tool.py  trace.py
crew/: __init__.py  chat.py  memory.py
docs/: architecture.md  backend-api.md  companion-agent-design.md  logging-reference.md  memory-commit-strategy.md  memory-compression.md  persona-guide.md  websocket-api.md
hermes/: candidate_pool.py  diary.py  plan.py  planner.py  prompt.py  runner.py  scheduler.py  soul_editor.py  tasks.py
mcp_servers/: __init__.py  deepwiki.py
personas/: anna.yaml  muse.yaml
prompts/: __init__.py  guidelines.md  mood.md  snapshots.py  soul.md  user_profile.md
tests/: test_candidate_pool.py  test_loop_trace.py  test_memory.py  test_plan.py  test_prompt_build.py  test_reasoner_response.py  test_scheduler_next_due.py  test_scheduler_trace.py  test_session_runner.py  test_soul_editor.py  test_trace.py  test_trace_artifacts.py  test_webui.py  test_wechat_dispatch.py
tools/: __init__.py  chat.py  chat_tools.py  guardrails.py  memory_tools.py  send_message.py
ui/: app.js  index.html  style.css
webui/: __init__.py  app.py  views.py
(+42 files in other folders)
