[project]
name = "agent-dev"
version = "0.1.0"
description = "Stateless multimodal chat API built on the OpenAI Responses API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=13.15.0",
    "fastapi>=0.116.1",
    "openai>=2.28.0",
    "openai-agents>=0.12.3",
    "openinference-instrumentation-openai-agents>=1.4.0",

    "loguru>=0.7.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.35.0",
]
