[project]
name = "agent-dev"
version = "0.1.0"
description = "Minimal agent loop with lifecycle hooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "openai>=2.28.0",
    "loguru>=0.7.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.0.0",
    "uvicorn>=0.30.0",
    "wechat-clawbot>=0.3.0",
    "hermes-agent",
]

[tool.uv.sources]
hermes-agent = { git = "https://github.com/NousResearch/hermes-agent.git" }

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: requires external services or real API calls",
]
